--- a/photo-gallery/src/index.html
+++ b/photo-gallery/src/index.html
@@ -13,9 +13,9 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/materia/bootstrap.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/formiojs@latest/dist/formio.full.min.css">
+  <link rel="stylesheet" href="assets/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/formio.full.min.css">
   
 
   <!-- add to homescreen for ios -->
